name:                   net-spider
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
-- synopsis:               
-- description:            
-- category:               
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings,
                        GeneralizedNewtypeDeriving,
                        TypeFamilies
  exposed-modules:      NetSpider,
                        NetSpider.Found,
                        NetSpider.Timestamp,
                        NetSpider.Spider,
                        NetSpider.Snapshot,
                        NetSpider.Graph
  other-modules:        NetSpider.Snapshot.Internal,
                        NetSpider.Graph.Internal,
                        NetSpider.Spider.Internal.Graph
  build-depends:        base,
                        time,
                        vector,
                        greskell-websocket,
                        greskell,
                        aeson,
                        safe-exceptions,
                        text,
                        unordered-containers,
                        hashable

-- executable net-spider
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:        
--   -- default-extensions:   
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  -- other-extensions:     
  other-modules:        NetSpiderSpec
  build-depends:        base, net-spider,
                        hspec

flag server-test
  description: Do test with Gremlin Server
  default: False
  manual: True

test-suite server-test-suite
  if !flag(server-test)
    buildable: False
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ServerTest.hs
  other-modules:        ServerTest.Common,
                        ServerTest.Snapshot,
                        ServerTest.Attributes
  build-depends:        base, hspec, net-spider, vector, text, greskell-websocket, greskell,
                        aeson, unordered-containers, text,
                        safe-exceptions,
                        hspec-need-env


source-repository head
  type:                 git
--  location:             
