name:                   net-spider-cli
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
-- synopsis:               
-- description:            
-- category:               
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings, StrictData
  -- other-extensions:     
  exposed-modules:      NetSpider.CLI,
                        NetSpider.CLI.Spider,
                        NetSpider.CLI.Command,
                        NetSpider.CLI.Exec,
                        NetSpider.CLI.Timestamp,
                        NetSpider.CLI.Snapshot
  -- other-modules:        
  build-depends:        base,
                        net-spider,
                        optparse-applicative,
                        safe-exceptions,
                        aeson,
                        hashable,
                        greskell-core,
                        text

-- executable net-spider-cli
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:        
--   default-extensions:   OverloadedStrings, StrictData
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings, StrictData
  -- other-extensions:     
  -- other-modules:        NetSpider.CLISpec
  build-depends:        base, net-spider-cli,
                        hspec

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              DocTest.hs
  build-depends:        base,
                        doctest >=0.13 && <0.17,
                        doctest-discover >=0.1.0.7 && <0.3

source-repository head
  type:                 git
--  location:             
