name:                   net-spider-pangraph
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Conversion between net-spider and pangraph
description:            Conversion between <https://hackage.haskell.org/package/net-spider net-spider> and <https://hackage.haskell.org/package/pangraph pangraph>. See README.md for detail.
category:               Database
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/net-spider
bug-reports:            https://github.com/debug-ito/net-spider/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     FlexibleInstances, OverloadedStrings
  exposed-modules:      NetSpider.Pangraph,
                        NetSpider.Pangraph.Atom
  -- other-modules:        
  build-depends:        base >=4.11.1.0,
                        net-spider >=0.2.1.0,
                        bytestring,
                        text,
                        pangraph,
                        time,
                        greskell

-- executable net-spider-pangraph
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:        
--   -- default-extensions:   
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  -- other-extensions:     
  other-modules:        NetSpider.PangraphSpec
  build-depends:        base, net-spider-pangraph, text, pangraph, net-spider,
                        hspec >=2.4.4

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              DocTest.hs
  build-depends:        base,
                        doctest >=0.13 && <0.17,
                        doctest-discover >=0.1.0.7 && <0.3

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/net-spider.git
