name:                   net-spider-rpl-cli
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               CLI executable of NetSpider.RPL.
description:            CLI executable of "NetSpider.RPL". It's also an example of "NetSpider.CLI" module.
                        .
                        __This package is a preliminary release. CLI interface and functionality may change drastically in future.__
                        .
                        For detail, run with @--help@ option.
category:               Database
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/net-spider
bug-reports:            https://github.com/debug-ito/net-spider/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     RankNTypes
  exposed-modules:      NetSpider.RPL.CLI
  -- other-modules:        
  build-depends:        base >=4.11.1.0 && <4.13,
                        net-spider,
                        net-spider-rpl,
                        net-spider-cli,
                        text,
                        unordered-containers,
                        optparse-applicative,
                        greskell

flag static
  description: Static link
  default: False

executable net-spider-rpl-cli
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports
  -- other-modules:        
  -- default-extensions:   
  -- other-extensions:     
  build-depends:        base, net-spider-rpl-cli
  if flag(static)
    ld-options:         -static

-- test-suite spec
--   type:                 exitcode-stdio-1.0
--   default-language:     Haskell2010
--   hs-source-dirs:       test
--   ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
--   main-is:              Spec.hs
--   -- default-extensions:   
--   -- other-extensions:     
--   other-modules:        NetSpider.RPL.ExampleSpec
--   build-depends:        base, net-spider-rpl-cli,
--                         hspec

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/net-spider.git
