name:                   net-spider-rpl-example
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Example of NetSpider.RPL.
description:            Example of NetSpider.RPL. See source files for the executables.
category:               Database
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/net-spider
bug-reports:            https://github.com/debug-ito/net-spider/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     RankNTypes
  exposed-modules:      NetSpider.RPL.Example
  -- other-modules:        
  build-depends:        base >=4.11.1.0 && <4.13,
                        net-spider,
                        net-spider-rpl,
                        text,
                        unordered-containers

executable net-spider-rpl-example
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports
  -- other-modules:        
  -- default-extensions:   
  -- other-extensions:     
  build-depends:        base, net-spider-rpl-example

-- test-suite spec
--   type:                 exitcode-stdio-1.0
--   default-language:     Haskell2010
--   hs-source-dirs:       test
--   ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
--   main-is:              Spec.hs
--   -- default-extensions:   
--   -- other-extensions:     
--   other-modules:        NetSpider.RPL.ExampleSpec
--   build-depends:        base, net-spider-rpl-example,
--                         hspec

source-repository head
  type:                 git
--  location:             
