name:                   net-spider-rpl
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               NetSpider data model and utility for RPL networks
description:            NetSpider data model and utility for RPL networks. See "NetSpider.RPL".
category:               Database
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/data/cooja.log,
                        test/data/syslog_root.log,
                        test/data/syslog_nonroot.log
homepage:               https://github.com/debug-ito/net-spider
bug-reports:            https://github.com/debug-ito/net-spider/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, DeriveGeneric
  exposed-modules:      NetSpider.RPL,
                        NetSpider.RPL.FindingID,
                        NetSpider.RPL.Local,
                        NetSpider.RPL.SR,
                        NetSpider.RPL.ContikiNG
  other-modules:        NetSpider.RPL.IPv6
  build-depends:        base,
                        aeson,
                        greskell,
                        net-spider,
                        net-spider-pangraph,
                        text,
                        ip,
                        hashable,
                        time

-- executable net-spider-rpl
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:        
--   -- default-extensions:   
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  other-modules:        NetSpider.RPL.ContikiNGSpec
  build-depends:        base, net-spider-rpl, net-spider, text,
                        hspec

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/net-spider.git
