name:                   net-spider
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
-- synopsis:               
-- description:            
-- category:               
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings,
                        GeneralizedNewtypeDeriving,
                        TypeFamilies
  exposed-modules:      NetSpider,
                        NetSpider.Input,
                        NetSpider.Output,
                        NetSpider.Found,
                        NetSpider.Timestamp,
                        NetSpider.Spider,
                        NetSpider.Spider.Config,
                        NetSpider.Unify,
                        NetSpider.Snapshot,
                        NetSpider.Graph,
                        NetSpider.Pair,
                        NetSpider.Query
  other-modules:        NetSpider.Snapshot.Internal,
                        NetSpider.Graph.Internal,
                        NetSpider.Spider.Internal.Graph,
                        NetSpider.Queue
  build-depends:        base,
                        time,
                        vector,
                        greskell-websocket,
                        greskell,
                        aeson,
                        safe-exceptions,
                        text,
                        unordered-containers,
                        hashable,
                        containers

-- executable net-spider
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:        
--   -- default-extensions:   
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  -- other-extensions:     
  -- other-modules:        
  build-depends:        base, net-spider, vector,
                        hspec

flag server-test
  description: Do test with Gremlin Server.
               Note that this test clears ALL CONTENT of the server.
               Note also that this test should not be run in parallel with other server-tests.
               Use --jobs=1 option when running stack test.
  default: False
  manual: True

test-suite server-test-suite
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ServerTest.hs
  other-modules:        ServerTest.Common,
                        ServerTest.Snapshot,
                        ServerTest.Attributes
  if flag(server-test)
    build-depends:        base, hspec, net-spider, vector, text, greskell-websocket, greskell,
                          aeson, unordered-containers, text, hashable, time,
                          safe-exceptions,
                          hspec-need-env
  else
    buildable: False


source-repository head
  type:                 git
--  location:             
