name:                   test-readme
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               test README
description:            test README. Longer.
category:               Test
cabal-version:          >= 1.10
build-type:             Simple
-- extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

-- library
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   ghc-options:          -Wall -fno-warn-unused-imports
--   build-depends:        base >=4.9.0.0 && <4.12,
--                         text,
--                         aeson

-- Dummy target to make cabal-install (run by travis) happy.
executable test-readme-dummy
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports
  build-depends:        base >=4.9.0.0 && <5


flag server-test
  description: Do test with Gremlin Server.
               Note that this test clears ALL CONTENT of the server.
               Note also that this test should not be run in parallel with other server-tests.
               Use --jobs=1 option when running stack test.
  default: False
  manual: True

test-suite readme-basic
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common basic"
  main-is:              README.lhs
  other-extensions:     OverloadedStrings
  if flag(server-test)
    build-depends:        base,
                          hspec, 
                          net-spider, safe-exceptions, hspec-need-env, text,
                          markdown-unlit
  else
    buildable: False

test-suite readme-weaver
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common weaver"
  main-is:              README.lhs
  other-extensions:     OverloadedStrings
  build-depends:        base,
                        hspec, 
                        net-spider, safe-exceptions, hspec-need-env, text,
                        markdown-unlit

test-suite readme-attrs
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common attrs"
  main-is:              README.lhs
  other-extensions:     OverloadedStrings
  if flag(server-test)
    build-depends:        base,
                          hspec, 
                          net-spider, safe-exceptions, hspec-need-env, text,
                          markdown-unlit,
                          greskell
  else
    buildable: False

test-suite readme-time-interval
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common time-interval"
  main-is:              README.lhs
  other-extensions:     OverloadedStrings
  if flag(server-test)
    build-depends:        base,
                          hspec, 
                          net-spider, safe-exceptions, hspec-need-env, text,
                          markdown-unlit,
                          greskell
  else
    buildable: False


test-suite readme-multi-link
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common multi-link"
  main-is:              README.lhs
  other-extensions:     OverloadedStrings
  if flag(server-test)
    build-depends:        base,
                          hspec, 
                          net-spider, safe-exceptions, hspec-need-env, text,
                          markdown-unlit,
                          greskell
  else
    buildable: False

test-suite readme-merge-link-attrs
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures -pgmL markdown-unlit
                        "-optL=common merge-link-attrs"
  main-is:              README.lhs
  other-extensions:     OverloadedStrings
  if flag(server-test)
    build-depends:        base,
                          hspec, 
                          net-spider, safe-exceptions, hspec-need-env, text,
                          markdown-unlit,
                          greskell,
                          scientific
  else
    buildable: False


